data/all_generated_tests/raw_wast_tests/unreachable_IncorrectConditionEvaluation_1285.wast
;; - **Test 6: Mixed Type Stack Manipulation and Conditional Branching**   ```   Use a complex sequence involving stack manipulations (e.g., `i32.const`, `i64.const`) followed by `br_if` and `unreachable`. Ensure condition evaluations correctly lead to the trap. Mis-evaluation of conditions due to stack operations could highlight differential behavior.   ``` -

(assert_invalid 
  (module (func (result i32) 
    (i32.const 0) 
    (i64.const 1) 
    (br_if 0 (unreachable))
  )) 
  "type mismatch"
)